--- a/package.json
+++ b/package.json
@@ -7,7 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "mint-ui": "^2.2.13",
+    "muse-ui": "^3.0.2",
+    "muse-ui-carbon-theme": "^0.1.0",
+    "muse-ui-message": "^0.2.1",
+    "muse-ui-toast": "^0.3.0",
+    "swiper": "^4.5.0",
+    "typeface-roboto": "0.0.54",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -15,6 +27,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
+    "babel-plugin-component": "^1.1.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.10"
